--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://s0ngyee.github.com
-title: s0ngyee's Blog
+url: http://blog.songyee.com
+title: s0ngyee
 subtitle: My technology and life notes.
 author: s0ngyee Bian
 simple_search: http://google.com/search
@@ -62,6 +62,15 @@ github_user:
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
+
+# Sina Weibo
+weibo_uid: 1731549510
+weibo_verifier: 3619ee9c
+weibo_fansline: 0   # How many lines for the fan list
+weibo_show: true    # Whether you want your weibo content to be shown
+weibo_pic: true     # Whether you want the pictures in weibo to be shown
+weibo_skin: 10      # Please refer to http://weibo.com/tool/weiboshow
+weibo_share: true   # Whether show the sharing button
 
 # Twitter
 twitter_user:
