--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://s0ngyee.github.com
+url: http://blog.songyee.com
 title: s0ngyee
 subtitle: My technology and life notes.
 author: s0ngyee Bian
@@ -33,6 +33,8 @@ destination: public
 plugins: plugins
 code_dir: downloads/code
 category_dir: blog/categories
+# tag options
+tag_dir: blog/tags
 markdown: rdiscount
 pygments: false # default python pygments have been replaced by pygments.rb
 
@@ -45,7 +47,7 @@ titlecase: true       # Converts page and post titles to titlecase
 
 # list each of the sidebar modules you want to include, in the order you want them to appear.
 # To add custom asides, create files in /source/_includes/custom/asides/ and add them to the list like 'custom/asides/custom_aside_name.html'
-default_asides: [asides/category_list.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
+default_asides: [asides/category_list.html, asides/tag_cloud.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
@@ -110,3 +112,4 @@ facebook_like: false
 # jiathis
 jiathis_user: 1350221344006496
 jiathis_uyan_user: 1735372
+
